# rp2040_pin_redirect

./: .gitignore  CMakeLists.txt  README.md  example.cpp  openocd.cfg  openocd_gdb.cfg
src/: CMakeLists.txt  redirect.pio  redirect.pio.h  redirect_basic.pio  redirect_basic.pio.h  squarewave.pio  squarewave.pio.h
